--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   hexcolor: ^1.0.6
   http: ^0.12.2
   shared_preferences: ^0.5.12+2
+  barcode_scan: ^3.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
