--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   http: ^0.12.2
   shared_preferences: ^0.5.12+2
   barcode_scan: ^3.0.1
+  flutter_datetime_picker: ^1.5.0
+  crypto: ^3.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
